<resources>
    <string name="welcome_String">Hello, Kola!</string>
    <string name="search_Word">Search ...</string>
    <string name="continue_To">Continue to</string>
    <string name="mobile_Div_Course">Mobile Dev. Course</string>
    <string name="complete">65% Completed</string>
    <string name="popular_Course">Popular Courses</string>
    <string name="seeALl">See All</string>
    <string name="software">Software</string>
    <string name="engineering">Engineering</string>
    <string name="content">todo</string>
    <string name="webCloud">Web and Cloud</string>
    <string name="technologies">Technologies</string>
    <string name="communication">Communication an</string>
    <string name="home" translatable="false">Home</string>
    <string name="province" translatable="false">Province</string>
    <string name="search" translatable="false">Search</string>
    <string name="more" translatable="false">More</string>
    <string name="account" translatable="false">Account</string>
    <string name="province_fragment">Province Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="account_fragment">Account Fragment</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="more_fragment">More Fragment</string>
    <string name="products">Products</string>
    <string name="cart">Cart</string>
    <string name="cart_fragment">Cart Fragment</string>
    <string name="all_book">All-book</string>
    <string name="bookmark">Bookmark</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>

</resources>