<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuHome"
        android:title="@string/home"
        android:icon="@drawable/home_icon_24"
        />
    <item
        android:id="@+id/menuProvince"
        android:title="@string/province"
        android:icon="@drawable/baseline_map_24"
        />
    <item
        android:id="@+id/menuSearch"
        android:title="@string/search"
        android:icon="@drawable/search_icon"
        />
    <item
        android:id="@+id/menuAccount"
        android:title="@string/account"
        android:icon="@drawable/account_icon"
        />
    <item
        android:id="@+id/menuMore"
        android:title="@string/more"
        android:icon="@drawable/more_icon"
        />

</menu>