<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/bgColor"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/welcome_String"
        android:textColor="@color/black"
        style="@style/DefaultTextSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile"
        android:contentDescription="@string/content"/>

    <FrameLayout
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/searchbar"
        android:paddingStart="44dp"
        android:textAlignment="textStart"
        android:textColor="@color/teal_200"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="20dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:translationZ="45dp"
        app:layout_constraintStart_toStartOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/button5"
        app:srcCompat="@drawable/search"
        android:contentDescription="@string/content"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/search_Word"
        android:textColor="@color/search"
        android:textSize="16sp"
        android:textStyle="bold"
        android:translationZ="45dp"
        app:layout_constraintBottom_toBottomOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="@+id/button5"
        app:layout_constraintStart_toStartOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/button5" />

    <FrameLayout
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="194dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rectangle1"
        android:elevation="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:translationZ="45dp"
        app:layout_constraintEnd_toEndOf="@+id/button8"
        app:layout_constraintTop_toTopOf="@+id/button8"
        app:srcCompat="@drawable/fe"
        android:contentDescription="@string/content" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:paddingStart="5dp"
        android:text="@string/continue_To"
        android:textColor="@color/color_text_on"
        style="@style/Continue"
        android:textStyle="bold"
        android:translationZ="45dp"
        app:layout_constraintStart_toStartOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:paddingStart="5dp"
        android:text="@string/mobile_Div_Course"
        android:textColor="@color/color_text_on"
        android:textStyle="bold"
        style="@style/Continue"
        android:translationZ="45dp"
        app:layout_constraintStart_toStartOf="@+id/button8"
        app:layout_constraintTop_toTopOf="@+id/button8"
        tools:ignore="RtlSymmetry" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="140dp"
        android:layout_height="6dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="105dp"
        android:backgroundTintMode="screen"
        android:progress="65"
        android:progressBackgroundTint="@color/white"
        android:progressBackgroundTintMode="screen"
        android:progressTint="@color/pink"
        android:progressDrawable="@drawable/progress"
        android:translationZ="45dp"
        app:layout_constraintStart_toStartOf="@+id/button8"
        app:layout_constraintTop_toTopOf="@+id/button8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="122dp"
        android:text="@string/complete"
        android:textColor="@color/color_text_on"
        style="@style/Complete"
        android:textStyle="bold"
        android:translationZ="45dp"
        app:layout_constraintStart_toStartOf="@+id/button8"
        app:layout_constraintTop_toTopOf="@+id/button8" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:text="@string/popular_Course"
        android:textColor="@color/black"
        style="@style/Popular"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="30dp"
        android:text="@string/seeALl"
        android:textColor="@color/black"
        style="@style/Popular"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="416dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:paddingLeft="22dp"
        android:paddingRight="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <androidx.cardview.widget.CardView
            android:layout_width="144dp"
            android:layout_height="129dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/fe_Color"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/content"
                app:srcCompat="@drawable/fe" />

            <TextView
                android:id="@+id/textView11"
                style="@style/Continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/software"
                android:textColor="@color/color_text_on"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView13"
                style="@style/Continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/engineering"
                android:textColor="@color/color_text_on"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="144dp"
            android:layout_height="129dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/fe_Color"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            tools:ignore="TextSizeCheck">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/content"
                app:srcCompat="@drawable/fe" />

            <TextView
                android:id="@+id/textView14"
                style="@style/Continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/webCloud"
                android:textColor="@color/color_text_on"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView15"
                style="@style/Continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/technologies"
                android:textColor="@color/color_text_on"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="144dp"
            android:layout_height="129dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/fe_Color"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/communication"
                android:textColor="@color/color_text_on"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="731dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="-23dp" />

</androidx.constraintlayout.widget.ConstraintLayout>